Fixing alignment of Bare Metal header bg image

--- a/themes/openstack/scss/baremetalpage.scss
+++ b/themes/openstack/scss/baremetalpage.scss
@@ -42,7 +42,7 @@ img.center {
 
 /* -- Hero Intro --------- */
 .intro-header.baremetal {
-    background: url("/assets/baremetal/OS-BareMetal-1314x492-02.png") no-repeat bottom center;
+    background: url("/assets/baremetal/OS-BareMetal-1314x492-02.png") no-repeat center center;
     background-size: cover;
     padding-bottom: 0;
 }
